--- a/xm/index.html
+++ b/xm/index.html
@@ -14,7 +14,7 @@
           <ul class="nav__list">
             <li class="nav__item">
               <a class="nav__logo">
-                <img src="img/logo.svg" alt="XM Crypto">
+                <img src="img/logo.svg" alt="XMCrypto">
               </a>
             </li>
             <li class="nav__item"><a href="#">Sign up</a></li>
@@ -69,15 +69,15 @@
       <section class="online__info">
         <h1 class="online__name">Exchange online with XMCrypto in 3 easy steps</h1>
         <ul class="online__list">
-          <li class="online__item">
+          <li class="online__item  online__item--1">
             <b>Register on XMCrypto</b>
             <p>Get access to XMCRYPTO capabilities in under 1 minute</p>
           </li>
-          <li class="online__item">
+          <li class="online__item  online__item--2">
             <b>Add credit to your account</b>
-            <p>Deposit funds to your XMCRYPTO account using your preferred method (credit card included)</p>
+            <p>Deposit funds to your XMCRYPTO account using your preferred method</p>
           </li>
-          <li class="online__item">
+          <li class="online__item  online__item--3">
             <b>Buy bitcoin or other cryptocurrency</b>
             <p>Crypto will be instantly credited to an automatically generated</p>
           </li>
@@ -96,5 +96,57 @@
       </form>
     </div>
   </div>
+  <div class="web">
+    <div class="container">
+      <div class="web__flex">
+        <div class="web__mockup"></div>
+        <section class="web__info">
+          <h1 class="web__name"><span>XM</span>Crypto Web Trader</h1>
+          <p class="web__text">XMcrypto’s highest purpose is to turn its users into successful traders and increase their success rates as much as possible. For that purpose we give you the XMcrypto Online trader, which enables you to be 100% involved in the trading process and adjust according to the market conditions, all the while letting you plan your trading activities to your preference.</p>
+          <p class="web__text">Utilize the full scope of the latest technological developments in the field by trading from any internet connectible device. Investing in Forex, Commodities and CFD has never been easier thanks to the XMcrypto Online Trader.</p>
+          <ul class="web__list">
+            <li>Invest in a wide selection of instruments.</li>
+            <li>Perform the trades swiftly.</li>
+            <li>Get informed about the latest industry trends.</li>
+            <li>Get the actual market prices at the moment.</li>
+            <li>Make trades regardless of your location.</li>
+            <li>Make the platform look according to your desires.</li>
+            <li>Make the changes you want.</li>
+            <li>Make informed trading decisions based on technical stats.</li>
+            <li>Have access from any internet connectible device.</li>
+          </ul>
+          <a class="button  button--medium  button--red  web__button" href="#">Download Web Trader</a>
+        </section>
+      </div>
+    </div>
+  </div>
+  <footer class="footer">
+    <div class="container">
+      <a class="footer__logo">
+        <img src="img/logo.svg" alt="XMCrypto">
+      </a>
+      <hr class="footer__hr">
+      <div class="footer__flex">
+        <a class="button  button--big  button--transparent" href="#">Contact support</a>
+        <div class="footer__info">
+          <p class="footer__text">Build your Forex business with our cutting-edge technology. XMcrypto® provides you everything you need to build your brokerage from scratch in just 7 days.</p>
+          <p class="footer__text">You just need to choose your business model and do what you do best- sales and marketing. We will take care of the rest.</p>
+        </div>
+      </div>
+    </div>
+    <div class="footer__social">
+      <div class="container">
+        <div class="footer__flex">
+          <ul class="footer__list">
+            <li><a class="footer__item  footer__item--fb" href="#">Facebook</a></li>
+            <li><a class="footer__item  footer__item--gp" href="#">Google+</a></li>
+            <li><a class="footer__item  footer__item--tw" href="#">Twitter</a></li>
+            <li><a class="footer__item  footer__item--em" href="#">Email</a></li>
+          </ul>
+          <p class="footer__copyright">Copyright © 2018 XMCrypto</p>
+        </div>
+      </div>
+    </div>
+  </footer>
 </body>
 </html>
