--- a/xm/index.html
+++ b/xm/index.html
@@ -136,7 +136,7 @@
     </div>
     <div class="footer__social">
       <div class="container">
-        <div class="footer__flex">
+        <div class="footer__flex  footer__flex--social">
           <ul class="footer__list">
             <li><a class="footer__item  footer__item--fb" href="#">Facebook</a></li>
             <li><a class="footer__item  footer__item--gp" href="#">Google+</a></li>
