--- a/xm/index.html
+++ b/xm/index.html
@@ -115,7 +115,7 @@
             <li>Make informed trading decisions based on technical stats.</li>
             <li>Have access from any internet connectible device.</li>
           </ul>
-          <a class="button  button--medium  button--red  web__button" href="#">Download Web Trader</a>
+          <a class="button  button--medium  button--red  web__button" href="#">Go live for WebTrader</a>
         </section>
       </div>
     </div>
@@ -127,7 +127,7 @@
       </a>
       <hr class="footer__hr">
       <div class="footer__flex">
-        <a class="button  button--big  button--transparent" href="#">Contact support</a>
+        <a class="button  button--big  button--transparent  footer__button" href="#">Contact support</a>
         <div class="footer__info">
           <p class="footer__text">Build your Forex business with our cutting-edge technology. XMcrypto® provides you everything you need to build your brokerage from scratch in just 7 days.</p>
           <p class="footer__text">You just need to choose your business model and do what you do best- sales and marketing. We will take care of the rest.</p>
