--- a/investix/ru/account-types.html
+++ b/investix/ru/account-types.html
@@ -133,17 +133,197 @@ function googleTranslateElementInit() {
               </footer>
             </th>
           </tr>
-          <tr>
+          <tr class="table__row">
             <td>Спреды</td>
             <td>&nbsp</td>
             <td>&nbsp</td>
             <td>Серебряный Спреды</td>
             <td>Золотой Спреды</td>
             <td>Платиновый Спреды</td>
+            <td rowspan="12">
+              <b>ТОЛЬКО ДЛЯ ЭКСКЛЮЗИВ-<br>НЫХ КЛИЕНТОВ</b><br><br>
+              <p>За дополнительной информацией обращайтесь к своему менеджеру по работе с клиентами.</p>
+            </td>
+          </tr>
+          <tr class="table__row">
+            <td>Поддержка в режиме 24/6</td>
+            <td class="table__check">
+              <img src="../img/table-check.svg" alt="Check">
+            </td>
+            <td class="table__check">
+              <img src="../img/table-check.svg" alt="Check">
+            </td>
+            <td class="table__check">
+              <img src="../img/table-check.svg" alt="Check">
+            </td>
+            <td class="table__check">
+              <img src="../img/table-check.svg" alt="Check">
+            </td>
+            <td class="table__check">
+              <img src="../img/table-check.svg" alt="Check">
+            </td>
+          </tr>
+          <tr class="table__row">
+            <td>Учебный центр</td>
+            <td class="table__check">
+              <img src="../img/table-check.svg" alt="Check">
+            </td>
+            <td class="table__check">
+              <img src="../img/table-check.svg" alt="Check">
+            </td>
+            <td class="table__check">
+              <img src="../img/table-check.svg" alt="Check">
+            </td>
+            <td class="table__check">
+              <img src="../img/table-check.svg" alt="Check">
+            </td>
+            <td class="table__check">
+              <img src="../img/table-check.svg" alt="Check">
+            </td>
+          </tr>
+          <tr class="table__row">
+            <td>Ежедневный обзор рынков</td>
+            <td class="table__check">
+              <img src="../img/table-check.svg" alt="Check">
+            </td>
+            <td class="table__check">
+              <img src="../img/table-check.svg" alt="Check">
+            </td>
+            <td class="table__check">
+              <img src="../img/table-check.svg" alt="Check">
+            </td>
+            <td class="table__check">
+              <img src="../img/table-check.svg" alt="Check">
+            </td>
+            <td class="table__check">
+              <img src="../img/table-check.svg" alt="Check">
+            </td>
+          </tr>
+          <tr class="table__row">
+            <td>Вебинары с профессионалами</td>
+            <td class="table__check">
+              <img src="../img/table-check.svg" alt="Check">
+            </td>
+            <td class="table__check">
+              <img src="../img/table-check.svg" alt="Check">
+            </td>
+            <td class="table__check">
+              <img src="../img/table-check.svg" alt="Check">
+            </td>
+            <td class="table__check">
+              <img src="../img/table-check.svg" alt="Check">
+            </td>
+            <td class="table__check">
+              <img src="../img/table-check.svg" alt="Check">
+            </td>
+          </tr>
+          <tr class="table__row">
+            <td>Оповещения о ценах</td>
+            <td class="table__check">
+              <img src="../img/table-check.svg" alt="Check">
+            </td>
+            <td class="table__check">
+              <img src="../img/table-check.svg" alt="Check">
+            </td>
+            <td class="table__check">
+              <img src="../img/table-check.svg" alt="Check">
+            </td>
+            <td class="table__check">
+              <img src="../img/table-check.svg" alt="Check">
+            </td>
+            <td class="table__check">
+              <img src="../img/table-check.svg" alt="Check">
+            </td>
+          </tr>
+          <tr class="table__row">
+            <td>Daily Analysis Video</td>
+            <td class="table__check">
+              <img src="../img/table-check.svg" alt="Check">
+            </td>
+            <td class="table__check">
+              <img src="../img/table-check.svg" alt="Check">
+            </td>
+            <td class="table__check">
+              <img src="../img/table-check.svg" alt="Check">
+            </td>
+            <td class="table__check">
+              <img src="../img/table-check.svg" alt="Check">
+            </td>
+            <td class="table__check">
+              <img src="../img/table-check.svg" alt="Check">
+            </td>
+          </tr>
+          <tr class="table__row">
+            <td>Персональный менеджер</td>
             <td>&nbsp</td>
+            <td><b>Junior</b></td>
+            <td><b>Senior</b></td>
+            <td><b>VIP</b></td>
+            <td><b>VIP</b></td>
+          </tr>
+          <tr class="table__row">
+            <td>PIA</td>
+            <td>&nbsp</td>
+            <td>&nbsp</td>
+            <td>&nbsp</td>
+            <td><p>Золотые сигналы</p></td>
+            <td><p>Платиновые сигналы</p></td>
+          </tr>
+          <tr class="table__row">
+            <td>Персональная торговая стратегия</td>
+            <td>&nbsp</td>
+            <td>&nbsp</td>
+            <td>&nbsp</td>
+            <td class="table__check">
+              <img src="../img/table-check.svg" alt="Check">
+            </td>
+            <td class="table__check">
+              <img src="../img/table-check.svg" alt="Check">
+            </td>
+          </tr>
+          <tr class="table__row">
+            <td>Персональный наставник</td>
+            <td>&nbsp</td>
+            <td>&nbsp</td>
+            <td>&nbsp</td>
+            <td>&nbsp</td>
+            <td class="table__check">
+              <img src="../img/table-check.svg" alt="Check">
+            </td>
+          </tr>
+          <tr class="table__row">
+            <td>Эксклюзивный доступ к позициям</td>
+            <td>&nbsp</td>
+            <td>&nbsp</td>
+            <td>&nbsp</td>
+            <td>&nbsp</td>
+            <td class="table__check">
+              <img src="../img/table-check.svg" alt="Check">
+            </td>
+          </tr>
+          <tr>
+            <td>&nbsp</td>
+            <td><a class="table__button" href="#">Пополнить $250</a></td>
+            <td><a class="table__button" href="#">Пополнить $1000</a></td>
+            <td><a class="table__button" href="#">Пополнить $2500</a></td>
+            <td><a class="table__button" href="#">Пополнить $10 000</a></td>
+            <td><a class="table__button" href="#">Пополнить $25 000</a></td>
           </tr>
         </table>
       </div>
+      <section class="table__why">
+        <div class="container">
+          <h1>Зачем мне счет определенного типа</h1>
+          <p>Мы знаем, например, что для того чтобы быть успешным трейдером, вы должны держать руку на пульсе рынка. Вот почему мы делаем все возможное, чтобы вы получали подробную аналитику и свежие новости в режиме реального времени. Каждый из наших 6 счетов включает в себя услуги и решения, соответствующие вашим торговым потребностям и опыту.</p>
+          <b>Благодаря этому вы получаете именно то, что вам нужно, чтобы максимизировать свои способности и развить торговые навыки.</b>
+        </div>
+      </section>
+      <section class="table__how">
+        <div class="container">
+          <h1>Не знаете, какой счет выбрать?</h1>
+          <p>Мы с радостью объясним вам различия между счетами и поможем выбрать оптимальный.<br>Просто свяжитесь с нами через <a href="#">ОНЛАЙН-чат</a>, по электронной почте или по телефону <a href="tel:+35924950556">+359-24950556</a>.</p>
+        </div>
+      </section>
     </section>
   </main>
   <section class="payment">
