--- a/investix/ru/account-types.html
+++ b/investix/ru/account-types.html
@@ -49,6 +49,21 @@
             </li>
             <li><a class="nav__chat" href="trading-room.html">Chat Room</a></li>
             <li>
+              <div id="google_translate_element"></div>
+              <script type="text/javascript">
+                function googleTranslateElementInit() {
+                  new google.translate.TranslateElement({pageLanguage: 'en', includedLanguages: 'en,ru', layout: google.translate.TranslateElement.FloatPosition.TOP_LEFT, autoDisplay: false}, 'google_translate_element');
+                }
+              </script>
+              <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+            </li>
+            <li>
+              <select class="nav__select">
+                <option value="en">EN</option>
+                <option value="ru">RU</option>
+              </select>
+            </li>
+            <li>
               <!-- <select class="nav__select">
                 <option value="en">EN</option>
                 <option value="ru">RU</option>
