--- a/mm/index.html
+++ b/mm/index.html
@@ -208,6 +208,7 @@
         <div class="payment__box  payment__box--visa"></div>
         <div class="payment__box  payment__box--master"></div>
         <div class="payment__box  payment__box--bank"></div>
+        <div class="payment__box  payment__box--vload"></div>
       </div>
     </div>
   </section>
