--- a/mm/index.html
+++ b/mm/index.html
@@ -61,6 +61,10 @@
               <a class="button" href="https://clients.multiplymarket.com/register">Open live account</a>
               <a class="button  button--blue" href="https://clients.multiplymarket.com/">Log In</a>
               <a class="button  button--number" href="tel:++442038290032">+442038290032</a>
+              <select class="main-nav__select">
+                  <option value="EN">EN</option>
+                  <option value="RU">RU</option>
+              </select>
             </div>
           </nav>
         </header>
